# tensor_pool_c

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FetchSbeTool.cmake
config/: discovery_example.toml  driver_integration_announce_separate.toml  driver_integration_dynamic.toml  driver_integration_example.toml  supervisor_example.toml
docs/: AERON_LIKE_API_PROPOSAL.md  API_MIGRATION.md  AUDIT_POSTMORTEM_INTEROP.md  CLIENT_CONDUCTOR_DESIGN.md  COMPLIANCE_MATRIX_SHM_ALL.md  COMPLIANCE_MATRIX_SHM_WIRE_V1_2.md  C_CLIENT_API_USAGE.md  DEPLOYMENT_GUIDE.md  DISCOVERY_USAGE.md  DRIVER_USAGE.md  HELPER_API_DRAFT.md  IMPLEMENTATION_COMPARISON_MATRIX.md  IMPLEMENTATION_GUIDE.md  PHASED_IMPLEMENTATION_PLAN.md  PHASED_IMPLEMENTATION_PLAN_API.md  PLAN_API_CONVENIENCE_WRAPPERS.md  PLAN_API_ERGONOMICS.md  PLAN_COVERAGE_IMPROVEMENT.md  PLAN_EXTERNAL_COMPONENTS_C.md  PLAN_JOIN_BARRIER_IMPLEMENTATION.md  PLAN_REFERENCE_IMPLEMENTATION.md  PLAN_SPEC_COMPLIANCE_AUDIT_2.md  PLAN_SPEC_COMPLIANCE_AUDIT_3.md  PLAN_SPEC_COMPLIANCE_AUDIT_4.md  PLAN_SPEC_COMPLIANCE_GAPS.md  PLAN_SPEC_COMPLIANCE_REMEDIATION.md  PLAN_SPEC_COMPLIANCE_REVIEW_5.md  PLAN_STRICT_COMPLIANCE_15_21A.md  PLAN_TRACEABILITY_REMEDIATION.md  PLAN_TRACELINK_IMPLEMENTATION.md  PLAN_WIRE_SPEC_V1_2.md  README.md  REQUIREMENTS_TEST_CHECKLIST.md  SHM_Aeron_UDP_Bridge_Spec_v1.0.md  SHM_Discovery_Service_Spec_v_1.0.md  SHM_Driver_Model_Spec_v1.0.md  SHM_Join_Barrier_Spec_v1.0.md  SHM_Tensor_Pool_Wire_Spec_v1.2.md  SHM_TraceLink_Spec_v1.0.md  SPEC_COMPLIANCE_MATRIX.md  (+4 more)
docs/archive/: PHASED_IMPLEMENTATION_PLAN_API.md  PLAN_EXTERNAL_COMPONENTS_C.md  PLAN_SPEC_COMPLIANCE_AUDIT_2.md  PLAN_SPEC_COMPLIANCE_AUDIT_3.md  PLAN_SPEC_COMPLIANCE_REMEDIATION.md  PLAN_SPEC_COMPLIANCE_REVIEW_5.md  PLAN_STRICT_COMPLIANCE_15_21A.md  PLAN_TRACEABILITY_REMEDIATION.md  PLAN_TRACELINK_IMPLEMENTATION.md  PLAN_WIRE_SPEC_V1_2.md  README.md  SHM_Tensor_Pool_Wire_Spec_v1.1.md  SPEC_COMPLIANCE_MATRIX.md
docs/coverage/: coverage-full.json  coverage.json  coverage.txt
docs/examples/: bridge_config_example.toml  driver_camera_example.toml
examples/: tp_example_bgapi.c  tp_example_consumer_driver.c  tp_example_consumer_nodriver.c  tp_example_producer_driver.c  tp_example_producer_nodriver.c  tp_fuzz_seed_gen_discovery.c  tp_sample_util.c  tp_sample_util.h
fuzz/: fuzz_control_decode.c  fuzz_control_poller.c  fuzz_discovery_decode.c  fuzz_merge_map_decode.c  fuzz_metadata_poller.c  fuzz_producer_claim.c  fuzz_progress_validate.c  fuzz_qos_poller.c  fuzz_shm_superblock.c  fuzz_shm_uri.c  fuzz_shm_uri_validate.c  fuzz_slot_decode.c  fuzz_slot_tensor_decode.c  fuzz_tensor_header.c  fuzz_tracelink_decode.c
include/tensor_pool/: tp.h  tp_aeron.h  tp_client.h  tp_client_conductor.h  tp_clock.h  tp_consumer.h  tp_consumer_manager.h  tp_consumer_registry.h  tp_context.h  tp_control.h  tp_control_adapter.h  tp_control_poller.h  tp_discovery_client.h  tp_discovery_service.h  tp_driver.h  tp_driver_client.h  tp_error.h  tp_handles.h  tp_join_barrier.h  tp_log.h  tp_merge_map.h  tp_metadata_poller.h  tp_producer.h  tp_progress_poller.h  tp_qos.h  tp_seqlock.h  tp_shm.h  tp_slot.h  tp_supervisor.h  tp_tensor.h  tp_trace.h  tp_tracelink.h  tp_types.h  tp_uri.h  tp_version.h
schemas/: bridge-schema.xml  discovery-schema.xml  driver-schema.xml  join-barrier-schema.xml  merge-schema.xml  trace-link-schema.xml  tracelink-schema.xml  wire-schema.xml
src/: tp_aeron.c  tp_client.c  tp_client_conductor.c  tp_clock.c  tp_consumer.c  tp_consumer_manager.c  tp_consumer_registry.c  tp_context.c  tp_control.c  tp_control_adapter.c  tp_control_poller.c  tp_discovery_client.c  tp_driver_client.c  tp_join_barrier.c  tp_merge_map.c  tp_metadata_poller.c  tp_producer.c  tp_progress_poller.c  tp_qos.c  tp_shm.c  tp_slot.c  tp_tensor.c  tp_tracelink.c  tp_uri.c
src/client/: tp_client.c  tp_client_conductor.c  tp_client_conductor_agent.c  tp_consumer.c  tp_consumer_manager.c  tp_consumer_registry.c  tp_control.c  tp_control_adapter.c  tp_control_poller.c  tp_discovery_client.c  tp_driver_client.c  tp_metadata_poller.c  tp_producer.c  tp_progress_poller.c  tp_qos.c
src/common/: tp_aeron.c  tp_aeron_wrap.c  tp_aeron_wrap.h  tp_agent.c  tp_context.c  tp_log.c  tp_mpsc_queue.c  tp_mpsc_queue.h  tp_shm.c  tp_slot.c  tp_tensor.c  tp_trace.c  tp_tracelink.c  tp_version.c
src/discovery/: tp_discovery_config.c  tp_discovery_service.c
src/driver/: tp_driver.c  tp_driver_agent.c  tp_driver_config.c
src/supervisor/: tp_supervisor.c  tp_supervisor_config.c
tests/: test_tp_accessors.c  test_tp_aeron.c  test_tp_agent.c  test_tp_client_conductor.c  test_tp_client_context.c  test_tp_client_errors.c  test_tp_consumer_apply.c  test_tp_consumer_errors.c  test_tp_consumer_registry.c  test_tp_control.c  test_tp_control_listen_json.c  test_tp_control_poller.c  test_tp_control_poller_driver.c  test_tp_control_poller_errors.c  test_tp_discovery_client.c  test_tp_discovery_client_live.c  test_tp_discovery_service.c  test_tp_driver_client.c  test_tp_driver_client_live.c  test_tp_driver_config.c  test_tp_driver_integration.c  test_tp_join_barrier.c  test_tp_lease_revoked.c  test_tp_log.c  test_tp_merge_map.c  test_tp_metadata_poller.c  test_tp_pollers.c  test_tp_producer_claim.c  test_tp_producer_errors.c  test_tp_progress_poller_extra.c  test_tp_qos_poller.c  test_tp_rollover.c  test_tp_shm_roundtrip.c  test_tp_shm_security.c  test_tp_smoke.c  test_tp_supervisor.c  test_tp_tensor_extra.c  test_tp_tracelink.c
tools/: run_driver_compliance.sh  run_driver_examples.sh  run_driver_matrix.sh  run_fuzz_smoke.sh  run_nodriver_examples.sh  tp_control_listen.c  tp_descriptor_listen.c  tp_discovery_query.c  tp_discoveryd.c  tp_driver.c  tp_example_bgapi.c  tp_example_consumer.c  tp_example_consumer_driver.c  tp_example_consumer_nodriver.c  tp_example_join_barrier.c  tp_example_producer.c  tp_example_producer_driver.c  tp_example_producer_nodriver.c  tp_fuzz_seed_gen.c  tp_fuzz_seed_gen_discovery.c  tp_shm_create.c  tp_shm_inspect.c  tp_supervisord.c
(+49 files in other folders)
